tests/suite/checker/errors/unbound/lambda.kind2
Main (a: U60): U60 -> U60
Main a = (b => (+ (+ a c) b))